# ai-development-config

./: .env.example  .gitignore  AGENTS.md  AGENTS.python.md  CLAUDE.md  CONFIGURATION-OVERVIEW.md  DOCKER-MCP-README.md  GETTING-STARTED.md  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.windsurf/: hooks.json  mcp_config.json
.windsurf/hooks/: README.md  audit_log.py
.windsurf/memory/: global_rules.md
.windsurf/memory/rules/: coding-standards.md
.windsurf/rules/: ci-policy.md  commit-policy.md  pr-policy.md  testing-policy.md  typing-policy.md
.windsurf/skills/ci-failure-triage/: SKILL.md
.windsurf/skills/code-review-prep/: SKILL.md
.windsurf/skills/coverage-regression-repair/: SKILL.md
.windsurf/skills/feature-implementation/: SKILL.md
.windsurf/skills/python-mypy-debugging/: SKILL.md
.windsurf/skills/python-precommit-repair/: SKILL.md
.windsurf/skills/python-pytest-failure-debugging/: SKILL.md
.windsurf/skills/python-ruff-fixing/: SKILL.md
.windsurf/skills/test-design/: SKILL.md
.windsurf/workflows/: dependency-upgrade-review.md  pr-readiness.md  release-readiness.md
claude-code-config/: .mcp.json  CLAUDE.md  settings.json
claude-code-config/.claude/agents/: dev-agent.md  dev-lead-agent.md  qa-agent.md  release-agent.md
claude-code-config/.claude/hooks/: audit_log.sh  block_dangerous_commands.sh  circuit-breaker-gate.sh  completion-contract.sh  config.env  decision-log.sh  freshness-gate.sh  full-test-gate.sh  precommit-gate.sh  quality_gate.sh  session-memory.sh  workflow-state.sh
claude-code-config/.claude/skills/: README.md
claude-code-config/.claude/skills/acceptance-validation/: SKILL.md
claude-code-config/.claude/skills/ci-failure-triage/: SKILL.md
claude-code-config/.claude/skills/code-review-prep/: SKILL.md
claude-code-config/.claude/skills/cross-repo-coordinator/: SKILL.md
claude-code-config/.claude/skills/dev-impl-loop/: SKILL.md
claude-code-config/.claude/skills/post-merge-close/: SKILL.md
claude-code-config/.claude/skills/pr-health-check/: SKILL.md
claude-code-config/.claude/skills/pr-readiness/: SKILL.md
claude-code-config/.claude/skills/project-setup/: SKILL.md
claude-code-config/.claude/skills/python-mypy-debugging/: SKILL.md
claude-code-config/.claude/skills/python-precommit-repair/: SKILL.md
claude-code-config/.claude/skills/python-ruff-fixing/: SKILL.md
claude-code-config/.claude/skills/task-decomposition/: SKILL.md
claude-code-config/.claude/skills/test-design/: SKILL.md
claude-code-config/.claude/skills/ticket-intake/: SKILL.md
claude-code-config/.claude/skills/ticket-pickup-check/: SKILL.md
claude-code-config/.claude/skills/workflow-resume/: SKILL.md
docs/: architecture.md  claude-code-agent-system.md  index.md
examples/: mcp_config.json
examples/backend/: AGENTS.md
examples/frontend/: AGENTS.md
examples/infra/: AGENTS.md
hooks/: block_dangerous_commands.py  policy_engine.py  quality_gate.py
